@@ -1,3 +1,8 @@
+2011-04-14 Javier Lanz <javier.lanz@artica.es>
+
+	* godmode/massive/massive_edit_modules.php: Added functionality to edit
+	SNMP version on massive operations
+
 2011-04-13 Sancho Lerena <slerena@artica.es>
 
 	* operation/servers/view_server_detail.php,
